--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
     "release": "pnpm build && changeset publish"
   },
   "peerDependencies": {
@@ -34,18 +37,23 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@eslint/js": "^9.39.0",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.39.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^7.0.0",
+    "jsdom": "^23.0.0",
+    "msw": "^2.0.10",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swr": "^2.2.5",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "vitest": "^1.0.4"
   },
   "keywords": [
     "react",
