--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "swr": "^2.0.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.27.1",
     "@eslint/js": "^9.39.0",
     "@testing-library/react": "^16.3.0",
