--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,33 @@
+# Dependencies
 node_modules
+
+# Build outputs
 dist
+*.tsbuildinfo
+
+# IDE & Editor
+.vscode
+.idea
+*.swp
+*.swo
+*~
 .DS_Store
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Turbo
 .turbo
-.changeset/*.md
-!.changeset/README.md
+
+# Coverage
+coverage
+.nyc_output
